force-app/main/default/objects/ATAK_Project__c/ATAK_Project__c.object-meta.xml
<CustomObject>
    <label>ATAK Project</label>
    <nameField>
        <label>ATAK Projects Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATAK Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>