force-app/main/default/objects/ATAK_Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>ISBLANK(End_Date__c) || End_Date__c &lt; TODAY()</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>