force-app/main/default/objects/ATAK_Project__c/fields/ATAK_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Creation_Date__c</fullName>
    <label>ATAK Creation Date</label>
    <type>Date</type>
</CustomField>