force-app/main/default/objects/ATAK_Project__c/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <label>Branche</label>
    <length>255</length>
    <type>Text</type>
</CustomField>