force-app/main/default/objects/ATAK_Project__c/fields/Cost_centre_Atak_Id__c.field-meta.xml
<CustomField>
    <fullName>Cost_centre_Atak_Id__c</fullName>
    <label>Cost Centre ATAK Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>