force-app/main/default/objects/ATAK_Project__c/fields/Cost_centre_Atak_Name__c.field-meta.xml
<CustomField>
    <fullName>Cost_centre_Atak_Name__c</fullName>
    <label>Cost centre Atak Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>