force-app/main/default/objects/ATAK_Project__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <label>Department Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>