force-app/main/default/objects/ATAK_Project__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <label>Depot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>