force-app/main/default/objects/ATAK_Project__c/fields/Depot_Manager__c.field-meta.xml
<CustomField>
    <fullName>Depot_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATAK_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>