force-app/main/default/objects/ATAK_Project__c/fields/Depot_Manager_Code__c.field-meta.xml
<CustomField>
    <fullName>Depot_Manager_Code__c</fullName>
    <label>Depot Manager Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>