force-app/main/default/objects/ATAK_Project__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <length>80</length>
    <type>Text</type>
</CustomField>