force-app/main/default/objects/ATAK_Project__c/fields/Parent_Subproject__c.field-meta.xml
<CustomField>
    <fullName>Parent_Subproject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Subproject</label>
    <referenceTo>ATAK_Project__c</referenceTo>
    <relationshipLabel>ATAK Projects</relationshipLabel>
    <relationshipName>ATAK_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>