force-app/main/default/objects/ATAK_Project__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>ATAK Projects</relationshipLabel>
    <relationshipName>ATAK_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>