force-app/main/default/objects/ATAK_Project__c/fields/Site_Manager_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager_Code__c</fullName>
    <label>Site Manager Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>