force-app/main/default/objects/ATAK_Project__c/fields/SubProject_ATAK__c.field-meta.xml
<CustomField>
    <fullName>SubProject_ATAK__c</fullName>
    <externalId>true</externalId>
    <label>Subproject ATAK</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>