force-app/main/default/objects/ATAK_Project__c/fields/Subproject_Description__c.field-meta.xml
<CustomField>
    <fullName>Subproject_Description__c</fullName>
    <label>Subproject Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>