force-app/main/default/objects/ATAK_Project__c/fields/Subproject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subproject_Name__c</fullName>
    <description>filled via a flow accoridng to a naming convention</description>
    <label>Subproject Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>