force-app/main/default/objects/ATAK_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SubProject_ATAK__c</columns>
    <columns>Subproject_Name__c</columns>
    <columns>Site_Manager_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>